--- a/hri_stt_pkg/CMakeLists.txt
+++ b/hri_stt_pkg/CMakeLists.txt
@@ -34,6 +34,12 @@ scripts/simple_pub.py
 scripts/simple_sub.py
 DESTINATION lib/${PROJECT_NAME}
 )
+
+install (DIRECTORY
+   launch
+   DESTINATION share/${PROJECT_NAME}/
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
