--- a/py_utils_pkg/CMakeLists.txt
+++ b/py_utils_pkg/CMakeLists.txt
@@ -24,10 +24,12 @@ find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
 find_package(rclpy REQUIRED)
 
+
 ament_python_install_package(${PROJECT_NAME})
 
 install(PROGRAMS
 py_utils_pkg/dummy_class.py
+##py_utils_pkg/alsa_audio.py
 ## py_utils_pkg/text_colours.py
 DESTINATION lib/${PROJECT_NAME}
 )
