--- a/py_utils_pkg/package.xml
+++ b/py_utils_pkg/package.xml
@@ -10,7 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <!-- next 2 lines added manually -->
   <buildtool_depend>ament_cmake_python</buildtool_depend>
-  <depend>text_colours</depend>
+ ## <depend>text_colours</depend>
   <depend>dummy_class</depend>
   <!--  end   -->
   <test_depend>ament_lint_auto</test_depend>
