--- a/chat_pkg/CMakeLists.txt
+++ b/chat_pkg/CMakeLists.txt
@@ -24,6 +24,7 @@ ament_python_install_package(scripts)
 
 install(PROGRAMS
 scripts/chat.py
+scripts/xmasqa.py
 DESTINATION lib/${PROJECT_NAME}
 )
 
